[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://objects/Walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/BlockFactory.tscn" type="PackedScene" id=5]
[ext_resource path="res://extensions/SignaledSamplePlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/BallLost.wav" type="Sample" id=7]
[ext_resource path="res://sounds/RoundEnd.wav" type="Sample" id=8]

[sub_resource type="SampleLibrary" id=1]

samples/BallLost = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/RoundEnd = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="BlockContainer" type="Node" parent="."]

[node name="BallContainer" type="Node" parent="."]

[node name="Walls" parent="." groups=[
"Wall",
] instance=ExtResource( 2 )]

[node name="Paddle" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 640, 680 )

[node name="Hud" parent="." instance=ExtResource( 4 )]

[node name="BlockFactory" parent="." instance=ExtResource( 5 )]

[node name="SoundEffects" parent="." instance=ExtResource( 6 )]

config/samples = SubResource( 1 )


